--- a/goalie_gurus/templates/api.html
+++ b/goalie_gurus/templates/api.html
@@ -66,15 +66,13 @@
                 <li><p>Data from hockey reference. This table contains player stats for every season since 1917. This is
                     updated nightly
                 </p>
-                <a href="https://goalie-gurus.herokuapp.com/api/data/historic_data" rel="noopener noreferrer" target="_blank">https://goalie-gurus.herokuapp.com/api/data/historic_data</a>
+                <a href="https://goalie-gurus.herokuapp.com/api/data/historic_data">https://goalie-gurus.herokuapp.com/api/data/historic_data</a>
                 <hr></li>
-                <li><p>Data from NHL API. This table contains gamelogs from every game for the top 56 goal scorers of all
+                <li><p>Data from NHL API. This table contains game logs from every game for the top 56 goal scorers of all
                     time. This is updated nightly for OV, Marleau, & Crosby.</p>
-                <a href="https://goalie-gurus.herokuapp.com/api/data/top_56_scorers_data" rel="noopener noreferrer" target="_blank">https://goalie-gurus.herokuapp.com/api/data/top_56_scorers_data</a>
-                <hr></li>
+                <a href="https://goalie-gurus.herokuapp.com/api/data/current_scorers_data">https://goalie-gurus.herokuapp.com/api/data/current_scorers_data</a></li>
                 <li><p>Data from NHL API. This table contains almost all NHL skater IDs of all-time.  It can be used to navigate and automate the NHL API</p>
-                <a href="https://goalie-gurus.herokuapp.com/api/data/player_data" rel="noopener noreferrer" target="_blank">https://goalie-gurus.herokuapp.com/api/data/player_data</a>
-                </li>
+                <a href="https://goalie-gurus.herokuapp.com/api/data/current_scorers_data">https://goalie-gurus.herokuapp.com/api/data/player_data</a></li>
                 </ul>
 
             </div>
@@ -86,6 +84,7 @@
 
 
     </div>
+
 
     <!-- <div id="myDiv">
         <!-- Plotly chart will be drawn inside this DIV -->
